decorate the exception_listener

--- a/Tests/Functional/app/ExceptionListener/config.yml
+++ b/Tests/Functional/app/ExceptionListener/config.yml
@@ -6,7 +6,8 @@ framework:
         enabled: true
 
 fos_rest:
-    exception: ~
+    exception:
+        forward: true
     format_listener:
         rules:
             - { path: '^/', fallback_format: json }
