--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -19,7 +19,8 @@ fos_rest:
     body_converter:
         enabled: true
         validate: true
-    exception: true
+    exception:
+        forward: true
     body_listener: true
     format_listener:
         enabled: true
