don't try to autoload resource files

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
             "FOS\\RestBundle\\": ""
         },
         "exclude-from-classmap": [
+            "Resources/",
             "Tests/"
         ]
     },
