deprecate the automatic route generation feature

--- a/Tests/Functional/app/AllowedMethodsListener/config.yml
+++ b/Tests/Functional/app/AllowedMethodsListener/config.yml
@@ -9,8 +9,7 @@ framework:
 
 fos_rest:
     allowed_methods_listener: true
-    routing_loader:
-        parse_controller_name: false
+    routing_loader: false
     service:
         templating: ~
     view:
