--- a/Tests/Functional/app/JMSSerializer/config.yml
+++ b/Tests/Functional/app/JMSSerializer/config.yml
@@ -4,8 +4,7 @@ imports:
     - { resource: ../config/exception_listener.yml }
 
 fos_rest:
-    routing_loader:
-        parse_controller_name: false
+    routing_loader: false
     service:
         templating: ~
     view:
