--- a/Tests/Functional/app/Version/config.yml
+++ b/Tests/Functional/app/Version/config.yml
@@ -1,6 +1,5 @@
 imports:
     - { resource: ../config/default.yml }
-    - { resource: ../config/default.php }
     - { resource: ../config/sensio_framework_extra.yml }
 
 framework:
@@ -8,6 +7,9 @@ framework:
         enabled: true
 
 fos_rest:
+    exception:
+        exception_listener: false
+        serialize_exceptions: false
     format_listener:
         rules:
             - { path: '^/', priorities: ['json', 'html'], fallback_format: json }
