Prepare body_listener default change and fix error renderer alias
if the symfony/serializer is not installed, the error_renderer.serializer alias is not used by symfony and so the custom one from rest-bundle wouldn't be active at all. we need to change the error_renderer alias directly

--- a/Tests/Functional/app/AllowedMethodsListener/config.yml
+++ b/Tests/Functional/app/AllowedMethodsListener/config.yml
@@ -12,6 +12,7 @@ fos_rest:
         exception_listener: false
         serialize_exceptions: false
     routing_loader: false
+    body_listener: false
     service:
         templating: ~
     view:
