--- a/Tests/Functional/app/AccessDeniedListener/config.yml
+++ b/Tests/Functional/app/AccessDeniedListener/config.yml
@@ -14,6 +14,7 @@ fos_rest:
         exception_listener: false
         serialize_exceptions: false
     routing_loader: false
+    body_listener: false
     service:
         templating: null
     view:
