--- a/Tests/Functional/app/Debug/config.yml
+++ b/Tests/Functional/app/Debug/config.yml
@@ -7,6 +7,7 @@ fos_rest:
     exception:
         debug: true
     routing_loader: false
+    body_listener: false
     service:
         templating: ~
     view:
