--- a/Tests/Functional/app/FlattenExceptionNormalizerRfc7807Format/config.yml
+++ b/Tests/Functional/app/FlattenExceptionNormalizerRfc7807Format/config.yml
@@ -12,6 +12,7 @@ fos_rest:
         serialize_exceptions: false
         flatten_exception_format: 'rfc7807'
     routing_loader: false
+    body_listener: false
     service:
         templating: ~
     view:
