--- a/Tests/Functional/app/FormErrorNormalizer/config.yml
+++ b/Tests/Functional/app/FormErrorNormalizer/config.yml
@@ -11,6 +11,7 @@ fos_rest:
         exception_listener: false
         serialize_exceptions: false
     routing_loader: false
+    body_listener: false
     service:
         templating: ~
     view:
