--- a/Tests/Functional/app/Version/config.yml
+++ b/Tests/Functional/app/Version/config.yml
@@ -14,6 +14,7 @@ fos_rest:
         rules:
             - { path: '^/', priorities: ['json', 'html'], fallback_format: json }
     routing_loader: false
+    body_listener: false
     service:
         templating: ~
     view:
