--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         "symfony/validator": "Add support for validation capabilities in the ParamFetcher, requires ^2.7|^3.0"
     },
     "conflict": {
+        "doctrine/inflector": "1.4.0",
         "sensio/framework-extra-bundle": "<3.0.13",
         "jms/serializer-bundle": "<2.0.0",
         "jms/serializer": "<1.13.0"
