make sure tests fail without access denied listener

--- a/Tests/Functional/app/AccessDeniedListener/config.yml
+++ b/Tests/Functional/app/AccessDeniedListener/config.yml
@@ -17,3 +17,7 @@ fos_rest:
     body_listener: false
     zone:
         - { path: ^/api/* }
+
+services:
+    api_token_authenticator:
+        class:  FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Security\ApiTokenAuthenticator
