--- a/Tests/Functional/app/config/framework.yml
+++ b/Tests/Functional/app/config/framework.yml
@@ -1,6 +1,8 @@
 framework:
     secret: test
-    router: { resource: "%kernel.project_dir%/config/routing.yml" }
+    router:
+        resource: "%kernel.project_dir%/config/routing.yml"
+        utf8: true
     test: ~
     csrf_protection: ~
     form: ~
