--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,16 @@ matrix:
   include:
     # lowest dependencies
     - php: 7.1
-      env: COMPOSER_FLAGS="--prefer-lowest"
+      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
     # Symfony 3 LTS
     - php: 7.2
-      env: SYMFONY_REQUIRE="3.4.*"
+      env: SYMFONY_REQUIRE="3.4.*" COMPOSER_FLAGS="--prefer-stable"
     # Symfony 4.3
     - php: 7.3
-      env: SYMFONY_REQUIRE="4.3.*"
+      env: SYMFONY_REQUIRE="4.3.*" COMPOSER_FLAGS="--prefer-stable"
     # Symfony 4.4
     - php: 7.4
-      env: SYMFONY_REQUIRE="4.4.*" COVERAGE=yes
+      env: SYMFONY_REQUIRE="4.4.*" COMPOSER_FLAGS="--prefer-stable" COVERAGE=yes
     # development dependencies
     - php: 7.4
       env: DEPENDENCIES='dev'
@@ -36,7 +36,6 @@ before_install:
   - echo "memory_limit=4G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - if [ "$COVERAGE" != "yes" ]; then phpenv config-rm xdebug.ini || true; fi
   - composer global require --no-progress --no-scripts --no-plugins symfony/flex dev-master
-  - if [ "$DEPENDENCIES" != "" ]; then composer config minimum-stability $DEPENDENCIES; fi
   - if [ "$SYMFONY_LTS" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_LTS; fi
 
 install:
