--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,10 @@ matrix:
     - php: 7.3
     # Symfony 4.4
     - php: 7.4
-      env: SYMFONY_REQUIRE="4.4.*" COMPOSER_FLAGS="--prefer-stable" COVERAGE=yes
+      env: SYMFONY_REQUIRE="4.4.*" COMPOSER_FLAGS="--prefer-stable"
     # Symfony 5.0
     - php: 7.4
-      env: SYMFONY_REQUIRE="5.0.*" COVERAGE=yes
+      env: SYMFONY_REQUIRE="5.0.*" COMPOSER_FLAGS="--prefer-stable" COVERAGE=yes
     # development dependencies
     - php: 7.4
       env: DEPENDENCIES='dev'
