--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/phpunit-bridge": "^4.1.8|^5.0",
         "symfony/asset": "^4.4|^5.0",
         "symfony/form": "^4.4|^5.0",
+        "symfony/mime": "^4.4|^5.0",
         "symfony/validator": "^4.4|^5.0",
         "symfony/serializer": "^4.4|^5.0",
         "symfony/yaml": "^4.4|^5.0",
