--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
     "minimum-stability":  "dev",
     "extra": {
         "branch-alias": {
-            "dev-3.x": "3.1-dev"
+            "3.x-dev": "3.1-dev"
         }
     }
 }
