--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         ]
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "psr/log": "^1.0",
         "symfony/config": "^3.4|^4.3",
         "symfony/debug": "^3.4|^4.3",
