fix mapping exception classes to response status codes

--- a/Tests/Functional/app/FlattenExceptionHandlerRfc7807Format/config.yml
+++ b/Tests/Functional/app/FlattenExceptionHandlerRfc7807Format/config.yml
@@ -4,6 +4,8 @@ imports:
 
 fos_rest:
     exception:
+        codes:
+            'InvalidArgumentException': 400
         exception_listener: false
         serialize_exceptions: false
         flatten_exception_format: 'rfc7807'
