--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -10,6 +10,10 @@ test_serializer_unknown_exception:
     path:     /serializer-error/unknown_exception.{_format}
     defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\SerializerErrorController::unknownExceptionAction }
 
+test_serializer_invalid_argument_exception:
+    path:     /serializer-error/invalid-argument-exception.{_format}
+    defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\SerializerErrorController::invalidArgumentExceptionAction }
+
 test_serializer_error_invalid_form:
     path:     /serializer-error/invalid-form.{_format}
     defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\SerializerErrorController::invalidFormAction }
