--- a/Tests/Functional/app/FlattenExceptionNormalizerLegacyFormat/config.yml
+++ b/Tests/Functional/app/FlattenExceptionNormalizerLegacyFormat/config.yml
@@ -8,6 +8,8 @@ framework:
 
 fos_rest:
     exception:
+        codes:
+            'InvalidArgumentException': 400
         exception_listener: false
         serialize_exceptions: false
         flatten_exception_format: 'legacy'
