--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
     - php: 7.4
       env: DEPENDENCIES='dev'
     - php: nightly
-      env: COMPOSER_FLAGS="--ignore-platform-reqs" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+      env: COMPOSER_FLAGS="--ignore-platform-reqs" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SYMFONY_PHPUNIT_VERSION=8.5
   allow_failures:
     - php: 7.4
       env: DEPENDENCIES='dev'
@@ -39,12 +39,14 @@ before_install:
   - if [ "$COVERAGE" != "yes" ]; then phpenv config-rm xdebug.ini || true; fi
   - composer global require --no-progress --no-scripts --no-plugins symfony/flex dev-master
   - if [ "$SYMFONY_LTS" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_LTS; fi
+  - if [ "$TRAVIS_PHP_VERSION" == "nightly" ]; then echo "remove"; composer remove --no-update willdurand/negotiation; else echo "do not remove"; fi
 
 install:
   - composer update $COMPOSER_FLAGS --prefer-dist
   - ./phpunit install
 
 script:
+  - echo $TRAVIS_PHP_VERSION
   - if [ "$COVERAGE" = "yes" ]; then ./phpunit --coverage-clover=coverage.clover; else ./phpunit; fi
   - if [ "$COVERAGE" = "yes" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
   - if [ "$COVERAGE" = "yes" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
