allow PHP 8 builds to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ matrix:
   allow_failures:
     - php: 7.4
       env: DEPENDENCIES='dev'
+    - php: nightly
 
 before_install:
   - echo "memory_limit=4G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
