--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
     - php: 7.4
       env: DEPENDENCIES='dev'
     - php: 8.0snapshot
-      env: SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+      env: COMPOSER_FLAGS="--ignore-platform-reqs" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
   allow_failures:
     - php: 7.4
       env: DEPENDENCIES='dev'
