--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     },
     "require-dev": {
         "sensio/framework-extra-bundle": "^5.2.3",
-        "symfony/phpunit-bridge": "^4.1.8|^5.0",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/asset": "^4.4|^5.0",
         "symfony/form": "^4.4|^5.0",
         "symfony/mime": "^4.4|^5.0",
