Use FOS REST exception normalizer only in FOS REST scope

--- a/Tests/Functional/app/FlattenExceptionNormalizerLegacyFormat/config.yml
+++ b/Tests/Functional/app/FlattenExceptionNormalizerLegacyFormat/config.yml
@@ -11,3 +11,4 @@ fos_rest:
         codes:
             'InvalidArgumentException': 400
         flatten_exception_format: 'legacy'
+        serializer_error_renderer: true
