--- a/Tests/Functional/app/FlattenExceptionNormalizerRfc7807Format/config.yml
+++ b/Tests/Functional/app/FlattenExceptionNormalizerRfc7807Format/config.yml
@@ -11,3 +11,4 @@ fos_rest:
         codes:
             'InvalidArgumentException': 400
         flatten_exception_format: 'rfc7807'
+        serializer_error_renderer: true
