--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "symfony/browser-kit": "^4.4|^5.0",
         "symfony/expression-language": "^4.4|^5.0",
         "symfony/css-selector": "^4.4|^5.0",
-        "jms/serializer-bundle": "^2.4.3|^3.0.1",
+        "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0",
         "jms/serializer": "^1.13|^2.0|^3.0",
         "psr/http-message": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.0"
