Install doctrine/annotations since it became an optional dependency in newer symfony versions

--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: security.php }
 
 framework:
+    annotations:
+        enabled: true
     serializer:
         enabled: true
     router: { resource: "%kernel.project_dir%/Configuration/routing.yml" }
