Prefer stable packages in PHP 8 pipeline

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -34,7 +34,7 @@ jobs:
             composer-flags: "--prefer-stable"
             symfony-require: "5.1.*"
           - php-version: 8.0
-            composer-flags: "--ignore-platform-reqs"
+            composer-flags: "--ignore-platform-reqs --prefer-stable"
 
     steps:
       - name: "Checkout"
