Enable property access config explicitly since this does not seem the case in newer symfony versions

--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -6,6 +6,7 @@ imports:
 framework:
     annotations:
         enabled: true
+    property_access: ~
     serializer:
         enabled: true
     router: { resource: "%kernel.project_dir%/Configuration/routing.yml" }
