--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -4,6 +4,9 @@ imports:
     - { resource: security.php }
 
 framework:
+    annotations:
+        enabled: true
+    property_access: ~
     serializer:
         enabled: true
     router: { resource: "%kernel.project_dir%/Configuration/routing.yml" }
