--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,6 @@
 /phpunit.xml.dist export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
+/.php-cs-fixer.php export-ignore
 /.styleci.yml export-ignore
 /.travis.yml export-ignore
