Add support for native PHP8 Route attributes

--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -70,3 +70,6 @@ test_allowed_methods2:
     path:     /allowed-methods
     methods: ['POST', 'PUT']
     defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\AllowedMethodsController::indexAction }
+
+test_route_attributes:
+    resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\RouteAttributesController
