--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0",
         "psr/http-message": "^1.0",
         "psr/log": "^1.0|^2.0|^3.0",
-        "sensio/framework-extra-bundle": "^5.2.3|^6.0",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/phpunit-bridge": "^5.3|^6.0",
         "symfony/asset": "^4.4|^5.3|^6.0",
         "symfony/browser-kit": "^4.4|^5.3|^6.0",
@@ -71,7 +71,7 @@
     },
     "conflict": {
         "doctrine/annotations": "<1.12",
-        "sensio/framework-extra-bundle": "<5.2.3",
+        "sensio/framework-extra-bundle": "<6.1",
         "symfony/error-handler": "<4.4.1",
         "jms/serializer-bundle": "<2.4.3|3.0.0",
         "jms/serializer": "<1.13.0"
