Test against PHP 8.1

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,6 +35,8 @@ jobs:
             symfony-require: "5.2.*"
           - php-version: 8.0
             composer-flags: "--ignore-platform-reqs --prefer-stable"
+          - php-version: 8.1
+            composer-flags: "--prefer-stable"
 
     steps:
       - name: "Checkout"
