--- a/composer.json
+++ b/composer.json
@@ -30,37 +30,38 @@
     },
     "require": {
         "php": "^7.2|^8.0",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
-        "symfony/framework-bundle": "^4.4.1|^5.0",
-        "symfony/http-foundation": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/security-core": "^3.4|^4.3|^5.0",
-        "willdurand/negotiation": "^2.0|^3.0",
-        "willdurand/jsonp-callback-validator": "^1.0"
+        "symfony/config": "^4.4|^5.3|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.3|^6.0",
+        "symfony/event-dispatcher": "^4.4|^5.3|^6.0",
+        "symfony/framework-bundle": "^4.4.1|^5.0|^6.0",
+        "symfony/http-foundation": "^4.4|^5.3|^6.0",
+        "symfony/http-kernel": "^4.4|^5.3|^6.0",
+        "symfony/routing": "^4.4|^5.3|^6.0",
+        "symfony/security-core": "^4.4|^5.3|^6.0",
+        "willdurand/jsonp-callback-validator": "^1.0",
+        "willdurand/negotiation": "^2.0|^3.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.13.2",
-        "psr/log": "^1.0|^2.0|^3.0",
-        "sensio/framework-extra-bundle": "^5.2.3",
-        "symfony/phpunit-bridge": "^5.3.10",
-        "symfony/asset": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/mime": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0",
-        "symfony/serializer": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0",
-        "symfony/security-bundle": "^4.4|^5.0",
-        "symfony/web-profiler-bundle": "^4.4|^5.0",
-        "symfony/twig-bundle": "^4.4|^5.0",
-        "symfony/browser-kit": "^4.4|^5.0",
-        "symfony/expression-language": "^4.4|^5.0",
-        "symfony/css-selector": "^4.4|^5.0",
-        "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "jms/serializer": "^1.13|^2.0|^3.0",
+        "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0",
         "psr/http-message": "^1.0",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "psr/log": "^1.0|^2.0|^3.0",
+        "sensio/framework-extra-bundle": "^5.2.3|^6.0",
+        "symfony/phpunit-bridge": "^5.3|^6.0",
+        "symfony/asset": "^4.4|^5.3|^6.0",
+        "symfony/browser-kit": "^4.4|^5.3|^6.0",
+        "symfony/css-selector": "^4.4|^5.3|^6.0",
+        "symfony/expression-language": "^4.4|^5.3|^6.0",
+        "symfony/form": "^4.4|^5.3|^6.0",
+        "symfony/mime": "^4.4|^5.3|^6.0",
+        "symfony/security-bundle": "^4.4|^5.3|^6.0",
+        "symfony/serializer": "^4.4|^5.3|^6.0",
+        "symfony/twig-bundle": "^4.4|^5.3|^6.0",
+        "symfony/validator": "^4.4|^5.3|^6.0",
+        "symfony/web-profiler-bundle": "^4.4|^5.3|^6.0",
+        "symfony/yaml": "^4.4|^5.3|^6.0"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "Add support for the request body converter and the view response listener, requires ^3.0",
