--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -18,6 +18,10 @@ test_serializer_error_invalid_form:
     path:     /serializer-error/invalid-form.{_format}
     defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\SerializerErrorController::invalidFormAction }
 
+test_custom_exception_serializer:
+    path:     /serializer-error/custom-argument-exception.{_format}
+    defaults: { _controller: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\SerializerErrorController::customExceptionAction }
+
 # Must be defined before test_version
 test_version2:
   resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\Version2Controller
