--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,3 +2,7 @@ version: 2
 
 sphinx:
   configuration: Resources/doc/conf.py
+
+python:
+  install:
+    - requirements: Resources/doc/requirements.txt
