--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="./vendor/autoload.php" colors="true">
+<phpunit bootstrap="vendor/autoload.php" colors="true">
     <php>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[indirect]=6"/>
         <ini name="error_reporting" value="-1" />
         <server name="SHELL_VERBOSITY" value="-1" />
     </php>
@@ -22,8 +23,4 @@
             </exclude>
         </whitelist>
     </filter>
-
-    <php>
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[indirect]=6"/>
-    </php>
 </phpunit>
