Allow jms serializer bundle 5.0

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,30 +21,30 @@ jobs:
       matrix:
         include:
           - php-version: 7.2
-            composer-flags: "--prefer-lowest --prefer-stable"
+            composer-flags: "--prefer-lowest "
             can-fail: false
           - php-version: 7.3
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             can-fail: false
           - php-version: 7.4
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             symfony-require: "4.4.*"
             can-fail: false
           - php-version: 7.4
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             symfony-require: "5.3.*"
             can-fail: false
             coverage: yes
           - php-version: 7.4
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             can-fail: false
             symfony-require: "5.4.*"
           - php-version: 8.0
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             can-fail: false
             symfony-require: "6.0.*"
           - php-version: 8.1
-            composer-flags: "--prefer-stable"
+            composer-flags: ""
             can-fail: false
 
     steps:
