--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "doctrine/annotations": "^1.13.2",
         "friendsofphp/php-cs-fixer": "^3.0",
         "jms/serializer": "^1.13|^2.0|^3.0",
-        "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0|^5.0@beta",
+        "jms/serializer-bundle": "^2.4.3|^3.0.1|^4.0|^5.0",
         "psr/http-message": "^1.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "sensio/framework-extra-bundle": "^6.1",
