fixed RequestMatcher deprecations

--- a/Tests/Functional/app/ViewResponseListener/config.yml
+++ b/Tests/Functional/app/ViewResponseListener/config.yml
@@ -1,10 +1,7 @@
 imports:
     - { resource: ../config/default.yml }
     - { resource: ../config/sensio_framework_extra.yml }
-
-framework:
-    serializer:
-        enabled: true
+    - { resource: framework.php }
 
 fos_rest:
     view:
